integrations/salesforce/force-app/main/default/objects/DL_Contract__c/DL_Contract__c.object-meta.xml
<CustomObject>
    <description>A contract in draftLegal, kept current by draftLegal: status, stage, whose turn, dates, value and the signed PDF. Read-only for everyone but the integration user.</description>
    <label>draftLegal Contract</label>
    <nameField>
        <label>Contract</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>draftLegal Contracts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>