integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Account__c.field-meta.xml
<CustomField>
    <fullName>DL_Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>draftLegal Contracts</relationshipLabel>
    <relationshipName>DL_Contracts</relationshipName>
</CustomField>