integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Approvals__c.field-meta.xml
<CustomField>
    <fullName>DL_Approvals__c</fullName>
    <description>Approvals on the current round, e.g. "1 of 2".</description>
    <label>Approvals</label>
    <type>Text</type>
    <length>40</length>
</CustomField>