integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>DL_Contract_Id__c</fullName>
    <description>draftLegal's id for the contract; the sync upserts by it.</description>
    <label>draftLegal Contract Id</label>
    <type>Text</type>
    <length>40</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>