integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>DL_Contract_Number__c</fullName>
    <label>Contract Number</label>
    <type>Text</type>
    <length>40</length>
</CustomField>