integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Counterparty__c.field-meta.xml
<CustomField>
    <fullName>DL_Counterparty__c</fullName>
    <label>Counterparty</label>
    <type>Text</type>
    <length>255</length>
</CustomField>