integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Currency__c.field-meta.xml
<CustomField>
    <fullName>DL_Currency__c</fullName>
    <label>Currency</label>
    <type>Text</type>
    <length>3</length>
</CustomField>