integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>DL_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>