integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>DL_Last_Synced__c</fullName>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>