integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>DL_Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>draftLegal Contracts</relationshipLabel>
    <relationshipName>DL_Contracts</relationshipName>
</CustomField>