integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Quote__c.field-meta.xml
<CustomField>
    <fullName>DL_Quote__c</fullName>
    <description>The Quote (or CPQ quote) the contract came from, when there was one.</description>
    <label>Quote Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>