integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Stage__c.field-meta.xml
<CustomField>
    <fullName>DL_Stage__c</fullName>
    <description>Request, Draft, Review, Negotiate, Approve, Sign, Signed or Closed.</description>
    <label>Stage</label>
    <type>Text</type>
    <length>40</length>
</CustomField>