integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Status__c.field-meta.xml
<CustomField>
    <fullName>DL_Status__c</fullName>
    <label>Status</label>
    <type>Text</type>
    <length>40</length>
</CustomField>