integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Value__c.field-meta.xml
<CustomField>
    <fullName>DL_Value__c</fullName>
    <label>Contract Value</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>