integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Waiting_On__c.field-meta.xml
<CustomField>
    <fullName>DL_Waiting_On__c</fullName>
    <description>Whose move it is, e.g. "Legal (Priya)" or "Approvers (1 of 2)".</description>
    <label>Waiting On</label>
    <type>Text</type>
    <length>255</length>
</CustomField>