integrations/salesforce/force-app/main/default/objects/DL_Contract__c/fields/DL_Waiting_Since__c.field-meta.xml
<CustomField>
    <fullName>DL_Waiting_Since__c</fullName>
    <label>Waiting Since</label>
    <type>DateTime</type>
</CustomField>